@@ -1,7 +1,9 @@
 include @BUILDDIR@/mk/sox.global.mk
 
 sox_MAKESPEC=manual
-
+ifeq "@HAVE_autoconf@" "yes"
+ifeq "@HAVE_automake@" "yes"
+ifeq "@HAVE_libtoolize@" "yes"
 sox.depconf: $(sox_DEPENDENCY)
 	@if test  "$(MAYBE_$*)" != ""; then
 		if test -d "@ROOTDIR@/$(MAYBE_$*)" ; then
@@ -11,4 +13,21 @@ sox.depconf: $(sox_DEPENDENCY)
 			exit -1
 		fi
 	fi
-	$(call configure_lib_package,$*,/usr/bin/autoreconf,-if,CFLAGS=)
+	$(call configure_lib_package,$*,/usr/bin/autoreconf,-if,CFLAGS=)a
+else
+sox.depconf: 
+	echo "Please install libtoolize"
+	exit -1
+
+endif
+else
+sox.depconf:
+	echo "Please install automake"
+	exit -1
+
+endif
+else
+sox.depconf:
+	echo "Please install autoconf"
+	exit -1
+endif
